@@ -1,3 +1,7 @@
+2009-07-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gfortran.dg/maxloc_1.f90: New test.
+
 2009-07-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
