@@ -1,3 +1,8 @@
+2009-07-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* trans-intrinsic.c (gfc_conv_intrinsic_minmaxloc): For integer
+	maxloc initialize limit to -huge-1 rather than just -huge.
+
 2009-07-03  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/40638
